# search-tui

./: Cargo.toml  README.md
examples/: htmd.rs
src/: app.rs  main.rs  ui.rs
tests/: app_tests.rs  ui_tests.rs
tests/snapshots/: ui_tests__snapshot_browse_multiple_results.snap  ui_tests__snapshot_browse_result_with_snippet.snap  ui_tests__snapshot_browse_second_item_selected.snap  ui_tests__snapshot_browse_single_result.snap  ui_tests__snapshot_error_mode.snap  ui_tests__snapshot_input_mode_empty.snap  ui_tests__snapshot_input_mode_with_text.snap  ui_tests__snapshot_loading_mode.snap
