[package]
name = "search-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "stx"
path = "src/main.rs"

[dependencies]
htmd = "0.5"
metadata-search-engine-rs = "0.1.1"
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
rayon = "1.12"
open = "5"
anyhow = "1"

[dev-dependencies]
insta = "1"
